# idlescreen

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  deny.toml  justfile  package.sh  renovate.json  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  deny.yml  release.yml  udeps.yml
crates/idle-dbus/: Cargo.toml
crates/idle-ipc/: Cargo.toml
crates/idle-upscaler/: Cargo.toml
crates/idle-upscaler/src/: cpu_tests.rs  lib_tests.rs
crates/idle-upscaler/src/cpu/: letterbox.rs  mod.rs  sample.rs  stretch.rs
crates/trance-dbus/: Cargo.toml
crates/trance-gpu/: Cargo.toml
crates/trance-gpu/src/: cpu.rs  gpu.rs  lib.rs
crates/trance-ipc/: Cargo.toml
crates/trance-upscaler/: Cargo.toml
crates/wayland-idle/: Cargo.toml
crates/wayland-idle/src/: lib.rs  monitor.rs
crates/wayland-idle/src/wayland/: handlers.rs  mod.rs  state.rs  thread.rs
crates/wayland-present/: Cargo.toml
crates/wayland-present/src/: appearance.rs  lib.rs  output.rs  presenter.rs
crates/wayland-present/src/overlay/: buffer.rs  handlers.rs  mod.rs  state.rs  thread.rs
crates/wayland-present/src/overlay/handlers/: registry.rs
crates/wayland-present/src/overlay/state/: mod.rs  overlay.rs  overlay_frame.rs  overlay_geom.rs  types.rs
docs/: BOUNDARIES.md  DBUS.md  NAMING.md  SPLIT_TUI.md  creating_plugins.md
docs/audit/: AUDIT_STAGE1_COMPLEXITY.md  AUDIT_STAGE1_LOGIC.md  AUDIT_STAGE1_MEMORY.md  AUDIT_STAGE1_PERF.md  AUDIT_STAGE2_TRIBUNAL.md  AUDIT_STAGE3_MUTANTS.md  AUDIT_STAGE3_TESTS.md  ORG_AUDIT_2026-07-24.md
idle-api/: Cargo.toml
idle-api/src/: caption.rs  color.rs  lib.rs
idle-cli/: Cargo.toml  idle.1
idle-cli/assets/: idlescreen.desktop
idle-cli/src/: doctor_sys.rs  interactive.rs  interactive_io.rs  main.rs  self_update.rs  usage.rs
idle-daemon/: Cargo.toml
idle-daemon/assets/: idle-daemon.service
idle-daemon/rpm/: post.sh  posttrans.sh
idle-daemon/src/: config.rs  config_parse.rs  inhibit.rs  ipc_runner.rs  main.rs
idle-plugins-all/: Cargo.toml
idle-runner/: Cargo.toml
idle-runner/src/: discovery.rs  discovery_tests.rs  launcher.rs  launcher_resolve.rs  launcher_tests.rs  lib.rs  renderer.rs
idle-runner/src/cell_renderer/: atlas.rs  gpu_cells.rs  gpu_init.rs  gpu_render.rs  mod.rs
idle-runner/src/plugin_session/: mod.rs
idle-runner/src/toolkit/sys_info/: mod.rs
mutants.out/: caught.txt  lock.json  missed.txt  outcomes.json
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: crates__idle-ipc__src__ffi_cell.rs_line_10_col_39.diff  crates__idle-ipc__src__ffi_cell.rs_line_10_col_39_001.diff  crates__idle-ipc__src__ffi_cell.rs_line_28_col_9.diff  crates__idle-ipc__src__ffi_cell.rs_line_47_col_28.diff  crates__idle-ipc__src__ffi_cell.rs_line_64_col_13.diff  crates__idle-ipc__src__ffi_cell.rs_line_64_col_26.diff  crates__idle-ipc__src__ffi_cell.rs_line_64_col_5.diff  crates__idle-ipc__src__ffi_cell.rs_line_67_col_13.diff  crates__idle-ipc__src__ffi_cell.rs_line_67_col_13_001.diff  crates__idle-ipc__src__ffi_cell.rs_line_67_col_13_002.diff  crates__idle-ipc__src__ffi_cell.rs_line_67_col_28.diff  crates__idle-ipc__src__ffi_cell.rs_line_71_col_20.diff  crates__idle-ipc__src__ffi_cell.rs_line_71_col_20_001.diff  crates__idle-ipc__src__ffi_cell.rs_line_71_col_22.diff  crates__idle-ipc__src__ffi_cell.rs_line_79_col_5.diff  crates__idle-ipc__src__path_safety.rs_line_16_col_44.diff  crates__idle-ipc__src__path_safety.rs_line_16_col_56.diff  crates__idle-ipc__src__path_safety.rs_line_16_col_61.diff  crates__idle-ipc__src__path_safety.rs_line_22_col_5_001.diff  crates__idle-ipc__src__path_safety.rs_line_25_col_28.diff  crates__idle-ipc__src__path_safety.rs_line_25_col_31.diff  crates__idle-ipc__src__path_safety.rs_line_25_col_54.diff  crates__idle-ipc__src__path_safety.rs_line_28_col_38.diff  crates__idle-ipc__src__path_safety.rs_line_9_col_5.diff  crates__idle-ipc__src__protocol.rs_line_100_col_13.diff  crates__idle-ipc__src__protocol.rs_line_107_col_13.diff  crates__idle-ipc__src__protocol.rs_line_43_col_9.diff  crates__idle-ipc__src__protocol.rs_line_63_col_13.diff  (+25 more)
trance-api/: Cargo.toml
trance-applet/: Cargo.toml  README.md  trance-applet.1
trance-cli/: Cargo.toml  trance.1
trance-cli/debian/: changelog
trance-cli/src/: bug_report.rs  clean.rs  completion.rs  config.rs  doctor.rs  doctor_fs.rs  interactive.rs  main.rs  self_update.rs  tests.rs  usage.rs
trance-cli/src/completions/: trance.bash  trance.zsh
trance-daemon/: Cargo.toml
trance-daemon/assets/: com.ubermetroid.Trance.service  io.github.ubermetroid.trance.policy  trance-daemon.1  trance-daemon.service
trance-daemon/debian/: changelog
trance-daemon/src/: config.rs  controller.rs  daemon.rs  dbus_server.rs  failsafe.rs  inhibit.rs  ipc_runner.rs  lock_monitor.rs  main.rs  presentation.rs
trance-daemon/src/controller/: commands.rs  status.rs
trance-daemon/src/daemon/: idle_logic.rs  mod.rs  presentation.rs  runtime.rs  tick_loop.rs
trance-daemon/src/dbus_server/: auth.rs  legacy.rs  mod.rs  screensaver.rs  service.rs
trance-daemon/src/failsafe/: mod.rs  pam.rs
trance-daemon/src/presentation/: frame_loop.rs  ipc_init.rs  ipc_session.rs  layout.rs  layout_tests.rs  mod.rs  plugin_loop.rs  topology.rs
trance-plugins-all/: Cargo.toml
trance-runner/: Cargo.toml  LINE_LIMITS.md  check_limits.rs
trance-runner/src/: caption_overlay.rs  cell_renderer.rs  discovery.rs  fps_overlay.rs  launcher.rs  launcher_tests.rs  lib.rs  plugin_meta.rs  plugin_session.rs  renderer.rs  sandbox.rs  trance_runner.rs  trance_runner_fullscreen.rs
trance-runner/src/cell_renderer/: font.rs  geom.rs  gpu_init.rs  gpu_render.rs  mod.rs  shader.wgsl
trance-runner/src/core/: screen_palette.rs
trance-runner/src/plugin_session/: loading.rs  mod.rs  reloading.rs
trance-runner/src/toolkit/: sys_info.rs  theme_query.rs
trance-runner/src/toolkit/sys_info/: mod.rs  monitors.rs  theme.rs
trance-tui/: Cargo.toml
(+125 files in other folders)
