[workspace]
resolver = "2"
members = [
    "crates/wayland-idle",
    "crates/wayland-present",
    "crates/trance-dbus",
    "crates/trance-gpu",
    "trance-api",
    "trance-runner",
    "trance-daemon",
    "trance-cli",
    "trance-applet",
    "trance-plugins-all",
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo
