[package]
name = "trance-daemon"
version = "0.2.0"
edition = "2024"
description = "Background idle daemon and core package for trance screensavers"
license = "MIT"

[[bin]]
name = "trance-daemon"
path = "src/main.rs"

[dependencies]
trance-runner = { path = "../trance-runner" }
trance-api = { path = "../trance-api" }
trance-dbus = { path = "../crates/trance-dbus" }
trance-gpu = { path = "../crates/trance-gpu" }
wayland-idle = { path = "../crates/wayland-idle" }
wayland-present = { path = "../crates/wayland-present" }
libc = "0.2"
signal-hook = "0.3"
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
futures-lite = "2.6"
tokio = { version = "1.52", features = ["rt-multi-thread", "time", "sync"] }

[package.metadata.deb]
name = "trance"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Background idle monitoring service for trance screensavers."
depends = "libc6, fonts-dejavu-core, trance-plugin-beams, dbus, libvulkan1 | libgl1"
recommends = "trance-plugins-all, trance-applet"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/trance-daemon", "usr/bin/trance-daemon", "755"],
    ["assets/trance-daemon.service", "usr/lib/systemd/user/trance-daemon.service", "644"],
    ["assets/trance-daemon.desktop", "etc/xdg/autostart/trance-daemon.desktop", "644"]
]

[package.metadata.generate-rpm]
name = "trance"
version = "0.2.0"
release = "1"
arch = "x86_64"
summary = "Background idle daemon and core package for trance screensavers"
description = "Background idle monitoring service for trance screensavers."
license = "MIT"
assets = [
    { source = "target/release/trance-daemon", dest = "/usr/bin/trance-daemon", mode = "755" },
    { source = "assets/trance-daemon.service", dest = "/usr/lib/systemd/user/trance-daemon.service", mode = "644" },
    { source = "assets/trance-daemon.desktop", dest = "/etc/xdg/autostart/trance-daemon.desktop", mode = "644" }
]
