[package]
name = "trance-daemon"
version = "0.2.6"
edition = "2024"
description = "Background idle daemon and core package for trance screensavers"
license = "MIT"

[[bin]]
name = "trance-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
trance-runner = { workspace = true }
trance-api = { workspace = true }
trance-dbus = { workspace = true }
trance-gpu = { workspace = true }
wayland-idle = { workspace = true }
wayland-present = { workspace = true }
libc = { workspace = true }
signal-hook = "0.3"
zbus = { workspace = true }
futures-lite = "2.6"
tokio = { workspace = true }

[package.metadata.deb]
name = "trance"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Background idle monitoring service for trance screensavers."
depends = "libc6, fonts-dejavu-core, trance-plugin-beams, dbus, libvulkan1 | libgl1"
recommends = "trance-plugins-all, trance-applet, trance-cli"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/trance-daemon", "usr/bin/trance-daemon", "755"],
    ["assets/trance-daemon.service", "usr/lib/systemd/user/trance-daemon.service", "644"],
    ["assets/trance-daemon.desktop", "etc/xdg/autostart/trance-daemon.desktop", "644"],
    ["assets/com.local76.Trance.service", "usr/share/dbus-1/services/com.local76.Trance.service", "644"]
]

[package.metadata.generate-rpm]
name = "trance"
version = "0.2.6"
release = "1"
arch = "x86_64"
summary = "Background idle daemon and core package for trance screensavers"
description = "Background idle monitoring service for trance screensavers."
license = "MIT"
assets = [
    { source = "target/release/trance-daemon", dest = "/usr/bin/trance-daemon", mode = "755" },
    { source = "assets/trance-daemon.service", dest = "/usr/lib/systemd/user/trance-daemon.service", mode = "644" },
    { source = "assets/trance-daemon.desktop", dest = "/etc/xdg/autostart/trance-daemon.desktop", mode = "644" },
    { source = "assets/com.local76.Trance.service", dest = "/usr/share/dbus-1/services/com.local76.Trance.service", mode = "644" }
]
