[package]
name = "trance-daemon"
version = "2.0.1"
edition = "2024"
description = "IdleScreen background idle daemon (Wayland screensaver host)"
license = "Apache-2.0"

[[bin]]
name = "idlescreen-daemon"
path = "src/main.rs"

# Transitional legacy binary name (same code).
[[bin]]
name = "trance-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
trance-runner = { workspace = true }
trance-api = { workspace = true }
trance-dbus = { workspace = true }
trance-upscaler = { workspace = true }
trance-ipc = { path = "../crates/trance-ipc" }
wayland-idle = { workspace = true }
wayland-present = { workspace = true }
libc = { workspace = true }
libloading = "0.8"
signal-hook = "0.4"
zbus = { workspace = true }
futures-lite = "2.6"
tokio = { workspace = true }
anyhow.workspace = true
notify = "8.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-journald = "0.3.2"

[package.metadata.deb]
name = "idlescreen"
changelog = "debian/changelog"
copyright = "2026 IdleScreen"
maintainer = "IdleScreen <jerydleuck@gmail.com>"
extended-description = "IdleScreen background idle monitoring and screensaver host for Wayland."
# Package rename from `trance`. Plugins renamed to saver-*.
depends = "libc6, fonts-dejavu-core, saver-beams, dbus"
provides = "trance"
replaces = "trance"
conflicts = "trance (<< 2.0.0)"
recommends = "idlescreen-savers, idlescreen-cli, app-tui"
suggests = "app-cosmic"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/idlescreen-daemon", "usr/bin/idlescreen-daemon", "755"],
    ["target/release/trance-daemon", "usr/bin/trance-daemon", "755"],
    ["assets/idlescreen-daemon.service", "usr/lib/systemd/user/idlescreen-daemon.service", "644"],
    ["assets/trance-daemon.service", "usr/lib/systemd/user/trance-daemon.service", "644"],
    ["assets/io.github.ubermetroid.trance.service", "usr/share/dbus-1/services/io.github.ubermetroid.trance.service", "644"],
    ["assets/io.github.ubermetroid.trance.policy", "usr/share/polkit-1/actions/io.github.ubermetroid.trance.policy", "644"],
    ["assets/idlescreen-daemon.1", "usr/share/man/man1/idlescreen-daemon.1", "644"],
    ["assets/packaging/user-service-lib.sh", "usr/lib/idlescreen/user-service-lib.sh", "644"],
]

[package.metadata.generate-rpm]
name = "idlescreen"
release = "1"
arch = "x86_64"
summary = "IdleScreen background idle daemon"
description = "IdleScreen background idle monitoring and screensaver host for Wayland."
license = "Apache-2.0"
post_install_script = "rpm/post.sh"
pre_uninstall_script = "rpm/preun.sh"
post_trans_script = "rpm/posttrans.sh"
assets = [
    { source = "target/release/idlescreen-daemon", dest = "/usr/bin/idlescreen-daemon", mode = "755", user = "root", group = "root" },
    { source = "target/release/trance-daemon", dest = "/usr/bin/trance-daemon", mode = "755", user = "root", group = "root" },
    { source = "assets/idlescreen-daemon.service", dest = "/usr/lib/systemd/user/idlescreen-daemon.service", mode = "644", user = "root", group = "root" },
    { source = "assets/trance-daemon.service", dest = "/usr/lib/systemd/user/trance-daemon.service", mode = "644", user = "root", group = "root" },
    { source = "assets/io.github.ubermetroid.trance.service", dest = "/usr/share/dbus-1/services/io.github.ubermetroid.trance.service", mode = "644", user = "root", group = "root" },
    { source = "assets/io.github.ubermetroid.trance.policy", dest = "/usr/share/polkit-1/actions/io.github.ubermetroid.trance.policy", mode = "644", user = "root", group = "root" },
    { source = "assets/idlescreen-daemon.1", dest = "/usr/share/man/man1/idlescreen-daemon.1", mode = "644", user = "root", group = "root" },
    { source = "assets/packaging/user-service-lib.sh", dest = "/usr/lib/idlescreen/user-service-lib.sh", mode = "644", user = "root", group = "root" },
]

[package.metadata.generate-rpm.requires]
dejavu-sans-mono-fonts = "*"
saver-beams = "*"

[package.metadata.generate-rpm.recommends]
idlescreen-savers = "*"
idlescreen-cli = "*"
app-tui = "*"
"(app-cosmic if cosmic-panel)" = ""

[package.metadata.generate-rpm.suggests]
app-cosmic = "*"

[package.metadata.generate-rpm.provides]
trance = "*"

[package.metadata.generate-rpm.obsoletes]
trance = "*"
