[package]
name = "trance-runner"
version = "0.2.3"
edition = "2024"
description = "Shared runner logic for the terminal screensavers"
license = "MIT"

[dependencies]
libc = "0.2"
trance-api = { path = "../trance-api" }
libloading = "0.8"
crossterm = "0.28"
sysinfo = "0.30"
fontdue = "0.9"
trance-gpu = { path = "../crates/trance-gpu" }
