[package]
name = "idle-upscaler"
version = "0.4.1"
edition = "2024"
description = "CPU upscaling for trance screensaver frames"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }
idle-api = { path = "../../idle-api" }
tracing.workspace = true